# dutch-learning-classes

./: .env.example  .gitignore  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  postcss.config.js  tailwind.config.js
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_create_users.sql  0002_create_lessons_exercises.sql  0003_create_progress_stats.sql  0004_seed_lesson1_exercises.sql  0005_seed_lesson2_exercises.sql  0006_seed_lesson3_exercises.sql  0007_database_optimization.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: lesson.rs  mod.rs  progress.rs  user.rs
backend/src/routes/: auth.rs  lessons.rs  mod.rs  progress.rs
docs/: DEPLOY_DIGITALOCEAN.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  demo.ts
frontend/src/components/: AuthGuard.tsx  ErrorBoundary.tsx  Layout.tsx  Onboarding.tsx  Skeleton.tsx  ToastProvider.tsx  XPToast.tsx
frontend/src/games/ClockGame/: ClockGame.tsx
frontend/src/games/DragDropGame/: DragDropGame.tsx
frontend/src/games/FillInBlankGame/: FillInBlankGame.tsx
frontend/src/games/FlashcardDeck/: FlashcardDeck.tsx
frontend/src/games/MatchingGame/: MatchingGame.tsx
frontend/src/games/TimedQuiz/: TimedQuiz.tsx
frontend/src/i18n/: index.ts
frontend/src/lessons/lesson1/: Lesson1Page.tsx
frontend/src/lessons/lesson2/: Lesson2Page.tsx
frontend/src/lessons/lesson3/: Lesson3Page.tsx
frontend/src/lessons/shared/: LessonShell.tsx
frontend/src/pages/: DashboardPage.tsx  LessonPage.tsx  LessonsPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts  progressStore.ts
frontend/src/types/: index.ts
