[package]
name = "dutch-app-backend"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "dutch-app-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace", "set-header", "request-id", "timeout", "limit"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & Security
jsonwebtoken = "9"
bcrypt = "0.16"
argon2 = "0.5"

# Rate limiting
governor = "0.8"
tower-governor = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
validator = { version = "0.19", features = ["derive"] }
regex = "1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
